Fix z-index for tooltips

--- a/css/flexkit.css
+++ b/css/flexkit.css
@@ -4466,7 +4466,7 @@ a.tooltip {
 }
 [class*="tooltip-native"]:after {
   content: attr(title);
-  z-index: 9999;
+  z-index: 9;
   font-size: 11.9px;
   line-height: 1.42857143;
   padding: 4px 8px;
@@ -4493,7 +4493,7 @@ a.tooltip {
   height: 0;
   border-width: 7px;
   border-style: solid;
-  z-index: 10000;
+  z-index: 10;
   border-color: #000;
 }
 [class*="tooltip-native"][class*="--top"][class*="--arrow"]:before,
